Reformating, went through every warning and removed